<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, SpeedLoggerActivity!</string>
    <string name="app_name">SpeedLogger</string>
    <string name="CarInfo">Car Info</string>
    <string name="CarBrand">Brand</string>
    <string name="CarModel">Model</string>
    <string name="CarModelIndex">Model index</string>
    <string name="CarGearbox">Gearbox</string>
    <string name="CarHorsePower">Horse power</string>
    <string name="CarTorque">Torque</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_local_times">LocalTimesActivity</string>
    <string name="lastlocbutton">GetLastKnownLocation</string>
    <string name="empty">Nothing to show</string>
    <string name="start">Start</string>
    <string name="Prefs">Preferences</string>
    <string name="FileGPS">FileGPS</string>
    <string name="RealGPS">RealGPS</string>
    <string name="ProviderGPS">GPS Provider</string>
    <string name="FileWithGPS">File with GPS</string>

    <string-array name="GpsList">
        <item>@string/FileGPS</item>
        <item>@string/RealGPS</item>
    </string-array>

    <string name="DevPrefs">DevPrefs</string>
    <string name="ScreenAwake">Keep Screen Awake</string>
    <string name="SaveTrackingSession">Save TrackingSession</string>
    <string name="EnableGPS">Please enable GPS!</string>
    <string name="SessionResult">Session Result</string>
    <string name="MaxSpeed">Max Speed:</string>
    <string name="TotalDistance">Total Distance:</string>
    <string name="TotalTime">Total Time:</string>
    <string name="OverallStats">Overall Statistics:</string>
    <string name="Times">Times:</string>
    <string name="Distances">Distances:</string>
    <string name="Na">N/A</string>
    <string name="Times060">0 - 60:</string>
    <string name="Times080">0 - 80:</string>
    <string name="Times0100">0 - 100:</string>
    <string name="Times0120">0 - 120:</string>
    <string name="Times80120">80 - 120:</string>
    <string name="AppTitle">SpeedLogger</string>
    <string name="Autostart_on">AUTOSTART ON</string>
    <string name="Autostart_off">AUTOSTART OFF</string>
    <string name="title_activity_result_details">Result details</string>
    <string name="action_settings">Settings</string>
    <string name="Back">Back</string>

</resources>